# soulbound-token

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
scripts/: add-admin.sh  add-asset.sh  add-self-admin.sh  build.sh  dfinity.js  manage.js  mint-many-soulbound-tokens.sh  mint-soulbound-token.sh  reinstall.sh  test.sh
src/: guards.rs  http.rs  hydrate.rs  main.rs  sbt.did  service_controller.rs  sns.did  sns.old.did  soul_bound_nft.rs  soulbound_token.rs  state.rs  token.rs
src/state/: stable_storage.rs
