[package]
name = "soulbound-token-canister"
version = "0.1.0"
edition = "2021"
authors = ["Leif Brockman<lbrockma34@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.3"
ic-cdk = "0.6.4"
ic-cdk-macros = "0.6.4"
rmp-serde = "1.1.0"
serde = "1.0.147"
url = "2.3.1"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["user-hooks"] }
